tests/baselines/reference/symbolProperty44.errors.txt
symbolProperty44.ts(5,9): error TS2300: Duplicate identifier '[Symbol.hasInstance]'.


==== symbolProperty44.ts (1 errors) ====
    class C {
        get [Symbol.hasInstance]() {
            return "";
        }
        get [Symbol.hasInstance]() {
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '[Symbol.hasInstance]'.
            return "";
        }
    }